--- a/.env.example
+++ b/.env.example
@@ -4,12 +4,18 @@
 # This is mandatory for the RAG chain to function.
 OPENAI_API_KEY="YOUR_LLM_API_KEY_HERE"
 
+# API Keys for Multi-LLM Support
+# Uncomment and provide keys for the models you want to use.
+# GEMINI_API_KEY="YOUR_GEMINI_API_KEY"
+# ANTHROPIC_API_KEY="YOUR_ANTHROPIC_API_KEY"
+
 # The base URL for the OpenAI-compatible API. 
 # Use the default if you are using OpenAI. Change this if you are using a self-hosted or other provider.
 OPENAI_API_BASE="https://api.openai.com/v1"
 
 # The name of the LLM model to use for generating answers.
 # Recommended: gpt-4.1-mini, gemini-2.5-flash, or a similar fast model.
+# The code will automatically select the correct API based on the model name and available API key.
 LLM_MODEL_NAME="gpt-4.1-mini"
 
 # The name of the embedding model.
