--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 aiohappyeyeballs==2.6.1
 aiohttp==3.13.1
 aiosignal==1.4.0
+altair==5.5.0
 annotated-types==0.7.0
+anthropic==0.71.0
 anyio==4.11.0
 attrs==25.4.0
 backoff==2.2.1
@@ -16,16 +18,23 @@ click==8.3.0
 coloredlogs==15.0.1
 dataclasses-json==0.6.7
 distro==1.9.0
+docstring_parser==0.17.0
 durationpy==0.10
 filelock==3.20.0
+filetype==1.2.0
 Flask==3.1.2
 flatbuffers==25.9.23
 frozenlist==1.8.0
 fsspec==2025.9.0
+gitdb==4.0.12
+GitPython==3.1.45
+google-ai-generativelanguage==0.9.0
+google-api-core==2.27.0
 google-auth==2.41.1
 googleapis-common-protos==1.71.0
 greenlet==3.2.4
 grpcio==1.76.0
+grpcio-status==1.76.0
 gunicorn==23.0.0
 h11==0.16.0
 hf-xet==1.2.0
@@ -48,9 +57,11 @@ jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
 kubernetes==34.1.0
 langchain==1.0.2
+langchain-anthropic==1.0.0
 langchain-classic==1.0.0
 langchain-community==0.4
 langchain-core==1.0.1
+langchain-google-genai==3.0.0
 langchain-openai==1.0.1
 langchain-text-splitters==1.0.0
 langgraph==1.0.1
@@ -66,6 +77,7 @@ mmh3==5.2.0
 mpmath==1.3.0
 multidict==6.7.0
 mypy_extensions==1.1.0
+narwhals==2.9.0
 nest-asyncio==1.6.0
 numpy==1.26.4
 oauthlib==3.3.1
@@ -81,20 +93,26 @@ orjson==3.11.4
 ormsgpack==1.11.0
 overrides==7.7.0
 packaging==25.0
+pandas==2.3.3
+pillow==11.3.0
 posthog==5.4.0
 propcache==0.4.1
+proto-plus==1.26.1
 protobuf==6.33.0
+pyarrow==22.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pybase64==1.4.2
 pydantic==2.12.3
 pydantic-settings==2.11.0
 pydantic_core==2.41.4
+pydeck==0.9.1
 Pygments==2.19.2
 PyPika==0.48.9
 pyproject_hooks==1.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
+pytz==2025.2
 PyYAML==6.0.3
 referencing==0.37.0
 regex==2025.10.23
@@ -106,20 +124,26 @@ rpds-py==0.28.0
 rsa==4.9.1
 shellingham==1.5.4
 six==1.17.0
+smmap==5.0.2
 sniffio==1.3.1
 SQLAlchemy==2.0.44
+streamlit==1.50.0
 sympy==1.14.0
 tenacity==9.1.2
 tiktoken==0.7.0
 tokenizers==0.22.1
+toml==0.10.2
+tornado==6.5.2
 tqdm==4.67.1
 typer==0.20.0
 typing-inspect==0.9.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
+tzdata==2025.2
 urllib3==2.3.0
 uvicorn==0.38.0
 uvloop==0.22.1
+watchdog==6.0.0
 watchfiles==1.1.1
 websocket-client==1.9.0
 websockets==15.0.1
