feat: Улучшение RAG-конвейера (SentenceSplitter, Reranking)

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,11 @@ OPENAI_API_KEY="YOUR_LLM_API_KEY_HERE"
 # GEMINI_API_KEY="YOUR_GEMINI_API_KEY"
 # ANTHROPIC_API_KEY="YOUR_ANTHROPIC_API_KEY"
 
+# --- Cohere Rerank Configuration (Optional) ---
+# COHERE_API_KEY="YOUR_COHERE_API_KEY"
+# RERANK_MODEL_NAME="rerank-english-v3.0"
+# RERANK_TOP_N=5
+
 # The base URL for the OpenAI-compatible API. 
 # Use the default if you are using OpenAI. Change this if you are using a self-hosted or other provider.
 OPENAI_API_BASE="https://api.openai.com/v1"
