feat: Реализация продвинутого RAG (HyDE и RAG-Fusion) для улучшения качества

--- a/.env.example
+++ b/.env.example
@@ -54,4 +54,9 @@ EMBEDDING_MODEL_NAME="text-embedding-ada-002"
 FLASK_PORT=5000
 
 # The secret key for Flask sessions (optional, but good practice)
+
+# --- Advanced RAG Techniques ---
+# USE_HYDE=True
+# USE_RAG_FUSION=True
+# RAG_FUSION_K=5 # Number of queries to generate for RAG-Fusion
 # FLASK_SECRET_KEY="A_VERY_SECRET_KEY"
